# wrp_ros

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: default.yml  release-github.yml  release.yml
action/: LiftControl.action
config/peripheral/: gps_receiver_node_config.yaml  imu_sensor_node_config.yaml  power_regulator_node_config.yaml  ultrasonic_sensor_node_config.yaml
include/wrp_ros/: mobile_base_messenger.hpp  mobile_base_ros.hpp  scout_messenger.hpp
include/wrp_ros/mobile_base/: mobile_base_ros.hpp
include/wrp_ros/peripheral/: gps_receiver_node.hpp  imu_sensor_node.hpp  lift_controller_node.hpp  power_regulator_node.hpp  ultrasonic_sensor_node.hpp
launch/description/: scout_mini_description.launch  scout_v2_description.launch
launch/mobile_base/: scout.launch  scout_base.launch  scout_mini.launch  tracer.launch
launch/peripheral/: gps_receiver.launch  imu_sensor.launch  power_regulator.launch  ultrasonic_sensor.launch
msg/: ActuatorState.msg  LiftStatus.msg  LightControlType.msg  MotionResetCommand.msg  MotionState.msg  PowerRegulatorChannelState.msg  PowerRegulatorDeviceState.msg  RangeData.msg  SystemState.msg
src/: mobile_base_messenger.cpp  mobile_base_node.cpp  mobile_base_ros.cpp  scout_messenger.cpp
src/mobile_base/: README.md  mobile_base_node.cpp  mobile_base_ros.cpp
src/peripheral/: README.md  gps_receiver_node.cpp  imu_sensor_node.cpp  lift_controller_node.cpp  power_regulator_node.cpp  ultrasonic_sensor_node.cpp
srv/: AccessControl.srv  PowerRegulatorControl.srv
urdf/: scout_v2.xacro
urdf/scout_mini/: scout_mini.xacro  scout_mini_wheel.xacro
urdf/scout_v2/: scout_v2.urdf  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
wrp_ros/: CMakeLists.txt  package.xml
wrp_sdk_msgs/: CMakeLists.txt  package.xml
wrp_sdk_msgs/srv/: LiftQuery.srv  LightControl.srv
wrp_sdk_periph/: CMakeLists.txt  README.md  package.xml
wrp_sdk_periph/config/: imu_sensor_node_config.yaml
wrp_sdk_periph/include/wrp_sdk_periph/: imu_sensor_node.hpp  lift_controller_node.hpp  power_regulator_node.hpp
wrp_sdk_periph/launch/: gps_receiver.launch  imu_sensor.launch  power_regulator.launch  ultrasonic_sensor.launch
wrp_sdk_periph/src/: README.md  gps_receiver_node.cpp  imu_sensor_node.cpp  lift_controller_node.cpp  power_regulator_node.cpp  ultrasonic_sensor_node.cpp
wrp_sdk_robot/: CMakeLists.txt  README.md  package.xml
wrp_sdk_robot/include/wrp_sdk_robot/: mobile_base_node.hpp
wrp_sdk_robot/launch/description/: scout_mini_description.launch  scout_v2_description.launch
wrp_sdk_robot/launch/mobile_base/: mobile_base.launch  scout.launch  scout_mini.launch  tracer.launch
wrp_sdk_robot/src/: mobile_base_node.cpp
wrp_sdk_robot/urdf/scout_mini/: scout_mini.xacro
wrp_sdk_robot/urdf/scout_v2/: scout_v2.urdf  scout_v2.xacro
